cmake_minimum_required(VERSION 3.0)

if (BIICODE)
    ADD_BII_TARGETS()
    IF(APPLE)
        TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-std=c++1z -stdlib=libc++")
    ELSEIF(WIN32 OR UNIX)
        TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-std=c++1z")
    ENDIF()
    TARGET_COMPILE_DEFINITIONS(${BII_BLOCK_TARGET} INTERFACE "-DBOOST_NO_AUTO_PTR")
    SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)

    include(biicode/boost/setup)
    SET(Boost_USE_STATIC_LIBS ON)
    bii_find_boost(COMPONENTS thread system regex date_time REQUIRED)
    target_include_directories(${BII_BLOCK_TARGET} INTERFACE ${Boost_INCLUDE_DIRS})
    target_link_libraries(${BII_BLOCK_TARGET} INTERFACE ${Boost_LIBRARIES})
    if (NOT MSVC)
        target_link_libraries(${BII_BLOCK_TARGET} INTERFACE pthread)
    endif()
    RETURN()
endif()
